plugins/formal-verification/testData/diagnostics/no_contracts/types/any.kt
// NEVER_VALIDATE

fun <!VIPER_TEXT!>anyArgumentReturn<!>(x: Any): Any {
    return x
}

fun <!VIPER_TEXT!>anyCast<!>(x: Int): Any {
    return x
}